# dkp

./: .env.docker-test  .env.example  .env.production  .gitignore  .venv  DOCKER_DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README-Docker.md  README.md  daphne_reloader.py  docker-compose.simple.yml  docker-compose.test.yml  docker-compose.yml  fswatch_daphne.sh  pyproject.toml
.claude/: settings.local.json
dkp/: AGENTS.md  CLAUDE.md  manage.py
dkp/comms/: admin.py  apps.py  cache_utils.py  consumers.py  models.py  routing.py  tests.py  urls.py  views.py
dkp/comms/migrations/: 0001_initial.py  0002_add_messagetype_model.py  0003_populate_message_types.py  0004_messagelog_hospital_messagetype_hospital.py  0005_remove_messagelog_location_id_and_more.py  0006_messagelog_no_users_who_received.py  0007_alter_messagelog_no_users_who_received.py
dkp/dkp/: asgi.py  settings.py  urls.py  wsgi.py
dkp/hospital/: admin.py  forms.py  models.py  tests.py  translation.py  urls.py  views.py
dkp/hospital/migrations/: 0001_initial.py  0002_create_initial_data.py  0003_operatingroom_name_en_operatingroom_name_pl_and_more.py  0004_update_translations.py  0005_ward_telephone.py  0006_remove_ward_telephone_ward_nurse_telephone_and_more.py  0007_remove_ward_nurse_telephone_and_more.py  0008_alter_ward_nurse_telephone_and_more.py  (+4 more)
dkp/stats/: models.py  urls.py  views.py
dkp/templates/: base.html
docker/nginx/: Dockerfile  nginx.conf
docker/postgres/: init.sql
docker/scripts/: certbot-setup.sh  docker-backup.sh  docker-deploy.sh  volume-cleanup.sh  wait-for-db.py
(+24 files in other folders)
